UX: Fix z-index and button position w/wo sidebar

--- a/common/common.scss
+++ b/common/common.scss
@@ -18,8 +18,15 @@
     box-shadow: var(--shadow-card);
     transform: translateY(100%);
     height: 100%;
-    z-index: z("header") - 1;
+    z-index: 300;
     transition: transform 0.25s ease;
+    body.sidebar-animate & {
+      opacity: 0;
+    }
+    body:not(.sidebar-animate) & {
+      opacity: 1;
+      transition: opacity var(--d-sidebar-animation-time);
+    }
     .mobile-view & {
       width: calc(100% - 20px);
     }
